--- a/README.org
+++ b/README.org
@@ -1,3 +1,10 @@
 * etorio
 
 Making a very basic factorio like game, inside emacs using elisp, in 6 days 11 hours, for the 10-day lisp game jam: https://itch.io/jam/autumn-lisp-game-jam-2023
+
+
+#+ATTR_ORG: :width 600
+[[file:.images/2023-10-23_10-02-30_screenshot.png]]
+
+
+[[file:devLog.org][Developer Log]]
