--- a/devLog.org
+++ b/devLog.org
@@ -16,3 +16,7 @@
 
 ***** https://spritely.institute/news/scheme-wireworld-in-browser.html
 - Has a somewhat factorio like belt-effect, draw pixels which is what I would be doing, can look at their guile code.
+
+*** Ideas:
+- Play ~10-21-23.wav~ at 0.42x, have speed increment up a notch each time you reach a point bracket. Stop at 1.00x. Display score also in text, and music modifier speed. Maybe also speed up belts as score hits a point.
+  - Score based on amount of output, and production statically configured. Not related to speed. (So as it speeds up, your score does not go up. Speed is just an additional visual indicator of score, etc, relates to melody speed.)
