--- a/devLog.org
+++ b/devLog.org
@@ -244,3 +244,61 @@ Here's what it looks like with blank floor, but I like the pattern, so I'll add 
 - 1) Get mode-map keybindings working
 - 2) Get collisions working.
 - 3) Get pushing things around working.
+* 10-25-23
+** Todo:
+- 1) Get minor mode-map keybindings working
+  - 1a) Get sound working
+- 2) Get collisions working (restricting movement)
+- 3) Get pushing things around working (and use collisions).
+** 16:10 Starting to work on 1)
+** 18:17 map parsing to map partially working, need to debug a bit further. Will look further into this. 4 days left. I think I can probably get something assembled by then.
+
+#+begin_src emacs-lisp :tangle yes
+(setq map-plist (list 'a 1 ))
+
+
+(defun parse-map-to-resources-and-collisions (map)
+  (let ((x 0) (map-length-val (map-length map)))
+    (while (< x map-length-val)
+      ;; if not newline at end of string for map, which we want to skip
+     ;; (if (not(eq (mod x 19) 0))
+          (setq map-symbol-name (substring level1-map x (+ x 1)))
+        (setq map-symbol (intern map-symbol-name))
+        (setq y (/ x 19))
+        ;; http://xahlee.info/emacs/emacs/elisp_symbol_plist.html
+        ;; (put 'map-plist (intern (concat (number-to-string x) "," (number-to-string y) )) map-symbol-name)
+
+        ;; https://www.gnu.org/software/emacs/manual/html_node/elisp/Plist-Access.html
+        (setq map-plist (plist-put map-plist
+                                   (intern (concat (number-to-string (mod x 19)) "," (number-to-string y)))
+                                   map-symbol-name))
+
+       ;; )
+
+      (setq x (1+ x))
+      )
+    )
+  )
+#+end_src
+
+#+begin_src emacs-lisp :tangle yes
+(parse-map-to-resources-and-collisions level1-map)
+(print map-plist)
+#+end_src
+
+#+begin_src text
+
+#+RESULTS:
+| a     | 1 | 0,0   | # | 1,0   | # | 2,0   | # | 3,0   | # | 4,0   | # | 5,0   | # | 6,0   | # | 7,0   | # | 8,0  | # | 9,0  | # | 10,0 | # | 11,0 | # | 12,0 | # | 13,0 | # | 14,0 | # | 15,0 | # | 16,0 | # | 17,0 | # | 18,0 | # | 0,1 |
+| 1,1   | # | 2,1   |   | 3,1   |   | 4,1   |   | 5,1   |   | 6,1   |   | 7,1   |   | 8,1   |   | 9,1   |   | 10,1 |   | 11,1 |   | 12,1 |   | 13,1 |   | 14,1 |   | 15,1 |   | 16,1 |   | 17,1 |   | 18,1 |   | 0,2  | # | 1,2  |   |     |
+| 2,2   | # | 3,2   |   | 4,2   |   | 5,2   |   | 6,2   |   | 7,2   |   | 8,2   |   | 9,2   |   | 10,2  |   | 11,2 |   | 12,2 |   | 13,2 |   | 14,2 |   | 15,2 |   | 16,2 |   | 17,2 |   | 18,2 |   | 0,3  |   | 1,3  | # | 2,3  |   |     |
+| 3,3   | # | 4,3   |   | 5,3   |   | 6,3   |   | 7,3   |   | 8,3   |   | 9,3   |   | 10,3  | i | 11,3  |   | 12,3 |   | 13,3 |   | 14,3 |   | 15,3 |   | 16,3 |   | 17,3 | c | 18,3 | c | 0,4  |   | 1,4  |   | 2,4  | # | 3,4  |   |     |
+| 4,4   | # | 5,4   |   | 6,4   |   | 7,4   |   | 8,4   |   | 9,4   |   | 10,4  |   | 11,4  | i | 12,4  |   | 13,4 |   | 14,4 |   | 15,4 |   | 16,4 |   | 17,4 |   | 18,4 | c | 0,5  | c | 1,5  |   | 2,5  |   | 3,5  | # | 4,5  |   |     |
+| 5,5   | # | 6,5   |   | 7,5   |   | 8,5   |   | 9,5   |   | 10,5  |   | 11,5  |   | 12,5  |   | 13,5  |   | 14,5 |   | 15,5 | w | 16,5 | w | 17,5 |   | 18,5 |   | 0,6  |   | 1,6  |   | 2,6  |   | 3,6  |   | 4,6  | # | 5,6  |   |     |
+| 6,6   | # | 7,6   |   | 8,6   |   | 9,6   |   | 10,6  |   | 11,6  |   | 12,6  |   | 13,6  |   | 14,6  |   | 15,6 |   | 16,6 | w | 17,6 | w | 18,6 |   | 0,7  |   | 1,7  |   | 2,7  |   | 3,7  | b | 4,7  | b | 5,7  | # | 6,7  |   |     |
+| 7,7   | # | 8,7   |   | 9,7   |   | 10,7  |   | 11,7  |   | 12,7  |   | 13,7  |   | 14,7  |   | 15,7  |   | 16,7 |   | 17,7 |   | 18,7 |   | 0,8  |   | 1,8  |   | 2,8  |   | 3,8  |   | 4,8  | b | 5,8  | b | 6,8  | # | 7,8  |   |     |
+| 8,8   | # | 9,8   |   | 10,8  |   | 11,8  |   | 12,8  |   | 13,8  |   | 14,8  |   | 15,8  |   | 16,8  |   | 17,8 |   | 18,8 |   | 0,9  | @ | 1,9  |   | 2,9  |   | 3,9  |   | 4,9  |   | 5,9  | b | 6,9  | b | 7,9  | # | 8,9  |   |     |
+| 9,9   | # | 10,9  |   | 11,9  |   | 12,9  |   | 13,9  |   | 14,9  |   | 15,9  |   | 16,9  |   | 17,9  |   | 18,9 |   | 0,10 |   | 1,10 |   | 2,10 |   | 3,10 |   | 4,10 |   | 5,10 |   | 6,10 |   | 7,10 |   | 8,10 | # | 9,10 |   |     |
+| 10,10 | # | 11,10 | # | 12,10 | # | 13,10 | # | 14,10 | # | 15,10 | # | 16,10 | # | 17,10 | # | 18,10 | # | 0,11 | # | 1,11 | # | 2,11 | # | 3,11 | # | 4,11 | # | 5,11 | # | 6,11 | # | 7,11 | # | 8,11 | # | 9,11 | # |      |   |     |
+
+#+end_src
