--- a/devLog.org
+++ b/devLog.org
@@ -306,3 +306,9 @@ Here's what it looks like with blank floor, but I like the pattern, so I'll add 
 | 10,10 | # | 11,10 | # | 12,10 | # | 13,10 | # | 14,10 | # | 15,10 | # | 16,10 | # | 17,10 | # | 18,10 | # | 0,11 | # | 1,11 | # | 2,11 | # | 3,11 | # | 4,11 | # | 5,11 | # | 6,11 | # | 7,11 | # | 8,11 | # | 9,11 | # |      |   |     |
 
 #+end_src
+* 10-26-23:
+- 1) Get collisions working (restricting movement)
+  - 1a) (Complete map parsing into collision map from yesterday)
+  - 1b) Modify ~etorio-move-left/right/up/down~ functions, to check collision map to allow cursor to move or not.
+    - If collision, stay in same cursor spot, else allow cursor to move in the inputted direction.
+- 2) Get pushing things around working (and use collisions).
